# metrics

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
.github/workflows/: CI.yml
include/metrics/: fixed_size_moving_array.hpp  grid_map.hpp  kinematic_types.hpp  modulo.hpp  moving_array.hpp  moving_grid.hpp
test/: fixed_size_moving_array.cpp  moving_array.cpp  moving_grid.cpp
